--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,17 @@ header {
   justify-content: center;
   align-items: center;
 }
+.kwadrat:nth-child(2){
+  margin-right: 2px;
+}
+.kwadrat:nth-child(3){
+  width: 150px;
+}
 .card {
   width: 1000px;
   height: 625px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
   background: linear-gradient(
     135deg,
     rgba(66, 66, 66, 0.301) 0%,
@@ -93,7 +98,7 @@ header {
   height: auto;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 30px 30px 30px 30px;
   display: flex;
   flex-direction: column;
   gap: 75px;
@@ -174,7 +179,6 @@ a {
   max-width: 1680px;
   height: 1900px;
   background: url(../img/back_shop.png);
-  /* background: rgb(31, 217, 224); */
   margin-left: auto;
   margin-right: auto;
 }
@@ -371,7 +375,7 @@ a {
 .sweater1 {
   width: 100%;
   max-width: 1680px;
-  height: 939px;
+  height: 100vh;
   background: url(../img/back2.png);
   margin-left: auto;
   margin-right: auto;
@@ -528,7 +532,7 @@ a {
 .look_killa {
   width: 100%;
   max-width: 1680px;
-  height: 939px;
+  height: 100vh;
   background: url(../img/back2.png);
   margin-left: auto;
   margin-right: auto;
@@ -536,7 +540,7 @@ a {
 .killa_box {
   width: 100%;
   max-width: 1300px;
-  height: 500px;
+  height: 200px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -549,6 +553,7 @@ a {
   font-family: "New Rocker", cursive;
   margin-bottom: 15px;
   text-align: center;
+  font-size: clamp(16px, 4vw, 32px);
 }
 .killa_box img {
   width: 35px;
@@ -590,7 +595,16 @@ a {
   backdrop-filter: blur(3.4px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
-.center{
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* Safari, Chrome */
+}
+.center {
   width: 100%;
   height: 80%;
   display: flex;
@@ -801,7 +815,7 @@ button:active {
     padding: 0px 30px 30px 30px;
   }
   .container-shop {
-    height: 4370px;
+    height: 100%;
   }
 }
 @media (max-width: 780px) {
@@ -846,7 +860,7 @@ button:active {
   .models-container {
     width: 100%;
     max-width: 1680px;
-    height: 10000px;
+    height: 100%;
     background: url(../img/big_back.png);
     margin-left: auto;
     margin-right: auto;
@@ -856,7 +870,7 @@ button:active {
   .models-container {
     width: 100%;
     max-width: 1680px;
-    height: 10400px;
+    height: 100%;
     background: url(../img/big_back.png);
     margin-left: auto;
     margin-right: auto;
@@ -881,7 +895,7 @@ button:active {
     height: 450px;
   }
   .text-ring1 p {
-    font-size: 12px;
+    font-size: 10px;
     margin-left: 30px;
   }
   .btn-buy {
@@ -910,7 +924,7 @@ button:active {
   .cont {
     width: 365px;
   }
-  .text_area{
+  .text_area {
     margin-top: 0px;
   }
   .send {
@@ -937,7 +951,7 @@ button:active {
     margin-left: 0px;
   }
   .card {
-    width: 90%;
+    width: 70%;
     height: 625px;
   }
   .ring1-box {
@@ -947,6 +961,12 @@ button:active {
 @media (max-width: 420px) {
   .ring1-box {
     width: 90%;
+  }
+  .card{
+    -webkit-box-shadow: 0px 0px 27px -16px rgba(66, 66, 66, 0.4);
+  -moz-box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
+  box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
+
   }
   .ring1 img {
     width: 180px;
@@ -1031,7 +1051,11 @@ button:active {
     padding: 0px 0px 0px 0px;
   }
 }
-
+@media(max-width: 772px){
+  header{
+    width: 100%;
+  }
+}
 @media (max-width: 550px) {
   .cont {
     width: 50%;
