--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,10 @@ header {
   justify-content: center;
   align-items: center;
 }
-.kwadrat:nth-child(2){
+.kwadrat:nth-child(2) {
   margin-right: 2px;
 }
-.kwadrat:nth-child(3){
+.kwadrat:nth-child(3) {
   width: 150px;
 }
 .card {
@@ -962,11 +962,10 @@ button:active {
   .ring1-box {
     width: 90%;
   }
-  .card{
+  .card {
     -webkit-box-shadow: 0px 0px 27px -16px rgba(66, 66, 66, 0.4);
-  -moz-box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
-  box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
-
+    -moz-box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
+    box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
   }
   .ring1 img {
     width: 180px;
@@ -976,6 +975,10 @@ button:active {
   .ring1 {
     width: 235px;
     height: 328px;
+    -webkit-box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.6);
+-moz-box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.6);
+box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.6);
+
   }
   .swiper-slide {
     display: flex;
@@ -1051,8 +1054,8 @@ button:active {
     padding: 0px 0px 0px 0px;
   }
 }
-@media(max-width: 772px){
-  header{
+@media (max-width: 772px) {
+  header {
     width: 100%;
   }
 }
