--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ header {
   width: 100%;
   height: 590px;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  gap: 15px;
 }
 .ring1 {
   width: 350px;
@@ -135,7 +135,6 @@ header {
 }
 .text-ring1 {
   width: 410px;
-  height: 410px;
   color: white;
   font-size: clamp(15px, 2.2vw, 17px);
   display: flex;
@@ -720,7 +719,6 @@ button:active {
   .text-ring1 {
     max-width: 320px;
     width: 100%;
-    height: 320px;
     color: white;
     display: flex;
     justify-content: space-evenly;
@@ -939,7 +937,6 @@ button:active {
     flex-direction: column;
   }
   .text-ring1 {
-    margin-top: 35px;
     justify-content: start;
     gap: 15px;
   }
