--- a/css/style.css
+++ b/css/style.css
@@ -971,13 +971,13 @@ button:active {
     box-shadow: 0px 0px 27px 16px rgba(66, 66, 66, 0.4);
   }
   .ring1 img {
-    width: 150px;
-    height: 150px;
-    padding: 20px 0px 20px 0px;
+    width: 140px;
+    height: 140px;
+    padding: 20px 0px 10px 0px;
   }
   .ring1 {
     width: 235px;
-    height: 250px;
+    height: 230px;
     -webkit-box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.6);
@@ -993,8 +993,11 @@ button:active {
   .card {
     height: 535px;
   }
-  .container{
+  .container {
     height: 100vh;
+  }
+  .card swiper-slide {
+    padding: 22px 30px 30px 30px;
   }
 }
 @media (max-width: 615px) {
