--- a/css/style.css
+++ b/css/style.css
@@ -932,9 +932,9 @@ button:active {
   .send {
     text-align: center;
   }
-  /* .contact_container{
+  .contact_container{
     height: 100vh;
-  } */
+  }
 }
 @media (max-width: 681px) {
   .ring1-box {
@@ -1000,6 +1000,9 @@ button:active {
   }
   .card swiper-slide {
     padding: 22px 30px 30px 30px;
+  }
+  .contact_container, .look_killa{
+    overflow: hidden;
   }
 }
 @media (max-width: 615px) {
